plugins {
    id 'java-library'
}

version = "1.0.0"
group = 'synadia'

repositories {
    mavenCentral()
    maven { url "https://repo1.maven.org/maven2/" }
    maven { url "https://central.sonatype.com/repository/maven-snapshots" }
}

def jnatsv = System.getenv("JNATS_VERSION")
if (jnatsv == null || jnatsv.equals("")) {
    try {
        jnatsv = jnatsVersion
    }
    catch (Exception ignore) {}
    if (jnatsv == null || jnatsv.equals("")) {
        jnatsv = "2.23.1-SNAPSHOT"
    }
}
System.out.println("JNats ${jnatsv}");

dependencies {
    implementation "io.nats:jnats:${jnatsv}"
    implementation 'org.jfree:jfreechart:1.5.5'
    implementation 'io.synadia:chaos-runner:0.0.5'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

task copyToLib(type: Copy) {
    into "build/libs"
    from configurations.runtimeClasspath
}

task make(type: Copy) {
    dependsOn clean
    dependsOn copyToLib
    dependsOn jar
}

task (uberJar, type:Jar) {
    archiveClassifier = 'uber'

    from sourceSets.main.output

    dependsOn configurations.runtimeClasspath
    from {
        configurations.runtimeClasspath.findAll { it.name.endsWith('jar') }.collect { zipTree(it) }
    }

    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    dependsOn copyToLib
}

apply plugin: 'java'
